# Sensors-Control

./: .gitignore  README.md
sc_description/: CMakeLists.txt  README.md  package.xml
sc_description/launch/: basic-gazebo.launch  basic-rs.launch
sc_description/urdf/: _d435.urdf.xacro
sc_gazebo_world/: CMakeLists.txt  CMakeListsOLD.txt  README.md
sc_gazebo_world/Mesh/Green_Box/: model.config
sc_gazebo_world/Mesh/Marker-Model/: MarkerData_1.dae  MarkerData_2.dae  MarkerData_9.dae
sc_gazebo_world/Mesh/Yellow_Box/: model.config
sc_gazebo_world/launch/: follower_turtlebot.launch  guider_turtlebot.launch  main.launch  turtlebot3_marker_Test_V1.launch:Zone.Identifier  turtlebot3_marker_V2.launch  turtlebot3_marker_V3.launch  turtlebot3_marker_V3_V2 .launch  turtlebot3_marker_V3_V2.launch  turtlebot3_marker_V4.launch  turtlebot3_marker_V4_Draft.launch  turtlebot3_marker_V4_V2.launch  turtlebots.launch
sc_gazebo_world/meshes/: tag36_11_00000.dae  tag36_11_00000_with_border.dae
sc_gazebo_world/meshes/Blue_Box/: model.config  model.sdf
sc_gazebo_world/meshes/Green_Box/: model.sdf
sc_gazebo_world/meshes/Marker-Model/: MarkerData_4.dae  MarkerData_5.dae  MarkerData_7.dae  MarkerData_8.dae
sc_gazebo_world/meshes/Marker_0/: model.config  model.sdf
sc_gazebo_world/meshes/Red_Box/: model.config  model.sdf
sc_gazebo_world/model/: README.md  model.config  model.sdf
sc_gazebo_world/model/Apriltag36_11_00000/: AR_cube.dae  model.config
sc_gazebo_world/model/Apriltag36_11_00000_A/: model.sdf
sc_gazebo_world/model/model/: model.sdf
sc_gazebo_world/model/model/AR_Tag/: model.sdf
sc_gazebo_world/model/model/Apriltag36_11_00000/: model.sdf
sc_gazebo_world/src/: imageprocessing.cpp  imageprocessing.h  laserprocessing.cpp  laserprocessing.h  notes.md  sample.cpp  sample.h  sc_robot_node.cpp  sc_robot_node.h  turtlebot_follower.m  turtlebot_follower_real.m  turtlebot_follower_test.m  turtlebot_leader.m
sc_gazebo_world/urdf/: tag36_11_00000.urdf  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_with_marker.gazebo.xacro  turtlebot3_waffle_pi_with_marker.urdf.xacro
sc_gazebo_world/world/: Marker_World.world  Marker_World_Test_V1.world  Marker_World_V2.world  gazebo.world
sc_gazebo_world_v1/: CMakeListsNEW.txt  package.xml
sc_gazebo_world_v1/launch/: guider_turtlebot.launch  main.launch  turtlebot3_marker.launch  turtlebot3_marker_Test_V1.launch  turtlebot3_marker_V3.launch  turtlebot3_marker_V3.launch:Zone.Identifier  turtlebot3_marker_V4.launch
sc_gazebo_world_v1/model/: README.md
sc_gazebo_world_v1/src/: imageprocessing.h  laserprocessing.h  main.cpp  sample.cpp
sc_gazebo_world_v1/urdf/: turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi_with_marker.urdf.xacro
sc_gazebo_world_v1/world/: Marker_World_Test_V1.world:Zone.Identifier  Marker_World_V3.world  Marker_World_V4.world  (+4 more)
(+8 files in other folders)
